# BoostLearn

./: CMakeLists.txt  Makefile
src/: main.cpp
src/client/: CMakeLists.txt  client.cpp
src/client/src/: client.cpp  client.hpp
src/server/: CMakeLists.txt
src/server/src/: server.cpp  server.hpp
